--- a/Views/Admin/Productos.cshtml
+++ b/Views/Admin/Productos.cshtml
@@ -1,28 +1,32 @@
 ﻿@{
-    ViewBag.Title = "InfoUsuarios";
+    ViewBag.Title = "Productos";
     Layout = "~/Views/Shared/_Layout - Admin.cshtml";
 }
 
-<h1 style="color:saddlebrown;  font-family: cursive; text-align:center; font-weight:bold">Usuarios</h1>
 
-<div class="container text-center">
+
+<h1 style="color:saddlebrown;  font-family: cursive; text-align:center; font-weight:bold">Productos</h1>
+
+<div class="container text-start">
     <div class="row justify-content-start">
-        <div class="col">
+        <div class="col-auto">
             <div class="row ">
-                <div class="col">
+                <div class="col-6">
+                    <a href="@Url.Action("AgregarProducto", "Admin")" class="btn btn-primary">
+                        <i class="bi bi-plus-circle-fill"></i> Agregar Producto
+                    </a>
+                </div>
+                <div class="col-6">
 
                     <select id="filterRoleState" class="form-select" onchange="filterTable()">
-                        <option value="">Filtrar por rol o estado...</option>
-                        <option value="admin">Administrador</option>
-                        <option value="domiciliario">Domiciliario</option>
-                        <option value="cliente">Cliente</option>
-                        <option value="activo">Activo</option>
-                        <option value="inactivo">Inactivo</option>
+                        <option value="">Filtrar por tipo</option>
+                        <option value="cookiecake">Cookiecake</option>
+                        <option value="galleta">Galleta</option>
                     </select>
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col-6">
             <div class="input-group mb-3">
                 <span class="input-group-text " id="basic-addon1">
                     <i class=" bi bi-search-heart-fill nav-icon " style="font-size: 30px;color: white"></i>
@@ -31,25 +35,23 @@
 
             </div>
         </div>
-        <div class="col">
-            <div id="noResultsMessage" class="alert alert-warning" style="display: none;">
-                No se encontraron resultados para los filtros aplicados. Intente modificar los criterios de búsqueda.
-            </div>
 
-        </div>
     </div>
 </div>
+<div class="col">
+    <div id="noResultsMessage" class="alert alert-warning" style="display: none;">
+        No se encontraron resultados para los filtros aplicados. Intente modificar los criterios de búsqueda.
+    </div>
 
+</div>
 <table class="table table-custom">
     <thead>
         <tr>
             <th>Codigo</th>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Teléfono</th>
-            <th>Correo</th>
-            <th>Rol</th>
-            <th>Estado</th>
+            <th>Producto</th>
+            <th>Tipo</th>
+            <th>Cantidad</th>
+            <th>Valor</th>
             <th>Accción</th>
 
         </tr>
@@ -58,15 +60,16 @@
         <!-- Aquí se agregan dinámicamente los productos -->
         <tr>
             <td>25</td>
-            <td>Marta</td>
-            <td>ASDAJK</td>
-            <td>3212345121</td>
-            <td>martajsd@dius.djd</td>
-            <td>admin</td>
-            <td>activo</td>
+            <td>Rainbow</td>
+            <td>cookiecake</td>
+            <td>2</td>
+            <td>15000</td>
             <td>
-                <a href="@Url.Action("DatosUsuario", "Admin")" class="btn btn-secondary">
+                <a href="@Url.Action("AgregarProducto", "Admin")" class="btn btn-secondary">
                     <i class=" bi bi-pencil-square nav-icon"></i>
+                </a>
+                <a href="#" class="btn btn-secondary">
+                    <i class="bi bi-trash nav-icon"></i>
                 </a>
             </td>
 
@@ -195,10 +198,10 @@
             }
 
             // Aplicar filtro de rol o estado
-            let role = cells[5].textContent.toLowerCase(); // Columna de Rol
-            let state = cells[6].textContent.toLowerCase(); // Columna de Estado
+            let tipe = cells[2].textContent.toLowerCase(); // Columna de Rol
 
-            if (filterValue === "" || role === filterValue || state === filterValue) {
+
+            if (filterValue === "" || tipe === filterValue ) {
                 if (match) {
                     rows[i].style.display = ""; // Mostrar fila si coincide con la búsqueda y el filtro
                     noResults = false;
