--- a/Views/Admin/ProductosPedido.cshtml
+++ b/Views/Admin/ProductosPedido.cshtml
@@ -1,56 +1,19 @@
-﻿@{
-    ViewBag.Title = "InfoUsuarios";
+﻿
+@{
+    ViewBag.Title = "ProductosPedido";
     Layout = "~/Views/Shared/_Layout - Admin.cshtml";
 }
 
-<h1 style="color:saddlebrown;  font-family: cursive; text-align:center; font-weight:bold">Usuarios</h1>
-
-<div class="container text-center">
-    <div class="row justify-content-start">
-        <div class="col">
-            <div class="row ">
-                <div class="col">
-
-                    <select id="filterRoleState" class="form-select" onchange="filterTable()">
-                        <option value="">Filtrar por rol o estado...</option>
-                        <option value="admin">Administrador</option>
-                        <option value="domiciliario">Domiciliario</option>
-                        <option value="cliente">Cliente</option>
-                        <option value="activo">Activo</option>
-                        <option value="inactivo">Inactivo</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="input-group mb-3">
-                <span class="input-group-text " id="basic-addon1">
-                    <i class=" bi bi-search-heart-fill nav-icon " style="font-size: 30px;color: white"></i>
-                </span>
-                <input type="text" id="searchInput" class="form-control " placeholder="Buscar en la tabla..." onkeyup="filterTable()" aria-describedby="basic-addon1">
-
-            </div>
-        </div>
-        <div class="col">
-            <div id="noResultsMessage" class="alert alert-warning" style="display: none;">
-                No se encontraron resultados para los filtros aplicados. Intente modificar los criterios de búsqueda.
-            </div>
-
-        </div>
-    </div>
-</div>
+<h1 style="color:saddlebrown;  font-family: cursive; text-align:center; font-weight:bold"> Productos en Pedido</h1>
 
 <table class="table table-custom">
     <thead>
         <tr>
             <th>Codigo</th>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Teléfono</th>
-            <th>Correo</th>
-            <th>Rol</th>
-            <th>Estado</th>
-            <th>Accción</th>
+            <th>Producto</th>
+            <th>Cantidad</th>
+            <th>Valor</th>
+            
 
         </tr>
     </thead>
@@ -58,17 +21,10 @@
         <!-- Aquí se agregan dinámicamente los productos -->
         <tr>
             <td>25</td>
-            <td>Marta</td>
-            <td>ASDAJK</td>
-            <td>3212345121</td>
-            <td>martajsd@dius.djd</td>
-            <td>admin</td>
-            <td>activo</td>
-            <td>
-                <a href="@Url.Action("DatosUsuario", "Admin")" class="btn btn-secondary">
-                    <i class=" bi bi-pencil-square nav-icon"></i>
-                </a>
-            </td>
+            <td>galleta 1</td>
+            <td>2</td>
+            <td>9000</td>
+           
 
         </tr>
     </tbody>
@@ -195,10 +151,10 @@
             }
 
             // Aplicar filtro de rol o estado
-            let role = cells[5].textContent.toLowerCase(); // Columna de Rol
-            let state = cells[6].textContent.toLowerCase(); // Columna de Estado
+            let estado = cells[4].textContent.toLowerCase(); // Columna de Rol
+            let domici = cells[3].textContent.toLowerCase(); // Columna de Rol
 
-            if (filterValue === "" || role === filterValue || state === filterValue) {
+            if (filterValue === "" || estado === filterValue || domici === filterValue ) {
                 if (match) {
                     rows[i].style.display = ""; // Mostrar fila si coincide con la búsqueda y el filtro
                     noResults = false;
@@ -214,3 +170,5 @@
         document.getElementById("noResultsMessage").style.display = noResults ? "block" : "none";
     }
 </script>
+
+
