Vistas domiciliario (faltan cositas)

--- a/Views/User/IndexDomiciliario.cshtml
+++ b/Views/User/IndexDomiciliario.cshtml
@@ -12,11 +12,11 @@
     <div class="row justify-content-between">
         <div class="col-4">
             <div class="image-container">
-                <img src="~/Content/Imagen/motorcycle.png" height="512" class="full-width-image" width="512" />
+                <img src="~/Content/Imagen/motorcycle.png" height="512" class="full-width-image img-fluid" width="512" />
             </div>
         </div>
         <div class="col-4">
-            <a href="@Url.Action("Galletas", "User")" class=" botonImag">
+            <a href="@Url.Action("Pedidos", "Domiciliario")" class=" botonImag">
                 <img src="~/Content/Imagen/package.png" alt="Botón de imagen" class="img-fluid rounded img-button">
 
             </a>
