--- a/Views/Shared/_LayoutDomiciliario.cshtml
+++ b/Views/Shared/_LayoutDomiciliario.cshtml
@@ -93,17 +93,24 @@
         <ul class=" nav nav-tabs">
 
             <li class="nav-item">
-                <a href="@Url.Action("Index", "Home")" class="nav-link">
+                <a href="@Url.Action("IndexDomiciliario", "User")" class="nav-link">
                     <i class="bi bi-house-door-fill nav-icon"></i>
                 </a>
 
             </li>
             <li class="nav-item">
-                <a href="@Url.Action("Contact", "Home")" class="nav-link">
+                <button type="button" class="nav-link" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
                     <i class="bi bi-bell-fill nav-icon"></i>
-                </a>
-
-            <li class="nav-item">
+                </button>
+                <div style="min-height: 120px;">
+                    <div class="collapse collapse-horizontal" id="collapseWidthExample">
+                        <div class="card card-body" style="width: 300px;">
+                            This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
+                        </div>
+                    </div>
+                </div>
+                </li>
+                <li class="nav-item">
 
                 @if (Session["UserLogged"] != null)
                 {
